<resources>
    <string name="app_name">SchedulerTracker</string>
    <string name="action_settings">Settings</string>
    <string name="add_term">Add/Modify Term</string>
    <string name="term_name">Term Name:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="name">Name</string>
    <string name="month_day_year">MM/DD/YYYY</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="save_and_exit"><![CDATA[Save & Exit]]></string>
    <string name="channel_name_crs_start">course start notification channel</string>
    <string name="channel_description_crs_start">course start notification channel description</string>
    <string name="channel_name_crs_end">course end notification channel</string>
    <string name="channel_description_crs_end">course end notification channel description</string>
    <string name="channel_name_asess_goal">assessment goal notification channel</string>
    <string name="channel_description_asess_goal">assessment goal notification channel description</string>
</resources>
